--- a/css/bootstrap3_dist.scss
+++ b/css/bootstrap3_dist.scss
@@ -1,10 +1,10 @@
-@import "css/variables.less";
-@import "css/spip.variables.less";
-@import "css/mixins.less";
+@import "css/variables";
+@import "css/spip.variables";
+@import "css/mixins";
 
 .header {position: relative;}
 .header .accueil a {color: inherit;}
-.header .spip_logos {float:left;margin: @paddingLarge;margin-left: 0;margin-top:0;}
+.header .spip_logos {float:left;margin: $paddingLarge;margin-left: 0;margin-top:0;}
 .header .accueil {}
 #logo_site_spip {line-height: 1em;}
 #slogan_site_spip {display: block;}
@@ -19,22 +19,22 @@
 .formulaire_recherche form input.search {width:100%;}
 
 .footer {
-  .clearfix;
-  margin-top:4em;
-  padding-top: 2em;
-  border-top:2px solid;
-  padding-bottom: 2em;
-  margin-bottom:0;
-  text-align: left;
-  position:relative;
-  .colophon {padding-right: 100px}
-  .generator {position: absolute;top:2em;right:0;max-width: 100px;}
+	.clearfix{};
+	margin-top:4em;
+	padding-top: 2em;
+	border-top:2px solid;
+	padding-bottom: 2em;
+	margin-bottom:0;
+	text-align: left;
+	position:relative;
+	.colophon {padding-right: 100px}
+	.generator {position: absolute;top:2em;right:0;max-width: 100px;}
 }
 
-.cartouche {margin-bottom: @emLineHeight;}
+.cartouche {margin-bottom:$emLineHeight;}
 .content.primary {min-height: 320px;}
 .content {
-  .postmeta .tags .inline {display: inline;}
+	.postmeta .tags .inline {display: inline;}
 }
 
 .page_sommaire .breadcrumb {display: none}
