correcte menu languue

--- a/css/jango_custom.scss
+++ b/css/jango_custom.scss
@@ -1,5 +1,14 @@
+@import 'css/jango_variables';
+
 body {
 	line-height: normal;
+}
+
+/* Dropdown menu */
+
+
+.dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus {
+	background-color: $couleur_principale;
 }
 
 /* Admin block, avoids conflict with topbar */
