corection margins formulaire button

--- a/css/jango_custom.scss
+++ b/css/jango_custom.scss
@@ -65,6 +65,12 @@ ul:not(.spip), ol:not(.spip) {
 	color: #5c6873;
 }
 
+/* Forms */
+
+.formulaire_spip .boutons {
+	margin: 0;
+}
+
 
 @media (min-width: @screen-lg-min) {
 	ul:not(.spip), ol:not(.spip) {
