--- a/css/jango_custom.scss
+++ b/css/jango_custom.scss
@@ -67,8 +67,33 @@ ul:not(.spip), ol:not(.spip) {
 
 /* Forms */
 
-.formulaire_spip .boutons {
-	margin: 0;
+.formulaire_spip {
+	margin-bottom: 20px;
+	background-color: #fff;
+	border: 1px solid #ebebeb;
+	border-radius: 4px;
+	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
+	box-shadow: 0 1px 1px rgba(0,0,0,.05);
+	background-color: transparent;
+	.boutons {
+		margin: 0;
+		background-color: transparent;
+	}
+}
+
+.btn-default, input.submit, .formulaire_spip button.submit:not(.btn-link) {
+	color: #ffffff;
+	background: $couleur_principale;
+	border-color: $couleur_principale;
+	font-size: 16px;
+	padding: 12px 26px 11px 26px;
+	border-radius: 0;
+}
+
+.btn-default:hover, input.submit:hover, .formulaire_spip button.submit:not(.btn-link):hover {
+		color: #ffffff;
+		background-color: $couleur_principale_darker;
+		border-color: $couleur_principale_darker;
 }
 
 
